# Siena-MLS-py

./: .gitignore  JES.py  README.md  notes.md  playground.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish-testpypi.yml  publish-to-pypi.yml
JES/: __init__.py
siena_mes/: __init__.py
siena_mls/: __init__.py  image_functions.py  management_service.py
tests/: __init__.py  test_exif_transpose.py  test_makePicture.py  test_makePicture_creates_resized_images.py  test_makePicture_using_mock.py
