[tool.poetry]
name = "siena-mes"
version = "18"
description = "Multimedia Environment for Students"
authors = ["Robin Flatland <flatland@siena.edu>","Ninad Chaudhari <nchaudhari@albany.edu>"]
license = "aGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10.1.0"
scipy = "^1.11.3"
numpy = "^1.26.1"
python-resize-image = "^1.1.20"
pi-heif = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
